--- a/views/counter_home.html.twig
+++ b/views/counter_home.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="utf-8">
         <title>Word Counter</title>
     </head>
@@ -14,7 +15,6 @@
             <form class="" action="/results" method="get">
                 <label for="word">Enter the word you want to test against:</label>
                 <input type="text" name="word" id="word">
-                <br>
                 <label for="paragraph">Enter a paragrah of words:</label>
                 <input type="text" name="paragraph" id="paragraph">
                 <br>
