--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -10,8 +10,22 @@
             <div class="jumbotron">
                 <h1>Word Repeat Counter</h1>
             </div>
-            <h3>{{ word }} was repeated {{ results }} times.</h3>
-
+            <h3>{% if word == null %}
+                    You have to enter a word, stupid!
+                {% elseif results == null %}
+                    That word wasn't even in the sentence, dummy!
+                {% else %}
+                    {{ word }} was repeated {{ results }}
+                    {% if results == 1 %}
+                        time.
+                    {% else %}
+                        times.
+                    {% endif %}
+                    <br>
+                    <h4>You entered:</h4>
+                    <h5> {{ paragraph }} </h5>
+                {% endif %}
+            </h3>
             <form class="" action="/" method="get">
                 <button type="submit" name="button" class="btn btn-success">Go Back</button>
             </form>
